--- a/app/src/main/res/layout/menu_profile.xml
+++ b/app/src/main/res/layout/menu_profile.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="74dp"
         android:layout_weight="1">
 
         <ImageView
@@ -21,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-       >
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,55 +31,36 @@
             android:orientation="vertical"
             android:paddingLeft="15dp"
             android:paddingRight="15dp">
-
-            <EditText
-                android:id="@+id/editTextEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:hint="email"
-                android:inputType="textEmailAddress"
-                android:paddingBottom="15dp"
-                android:textColorHint="@color/colorAccent" />
-
-            <EditText
-                android:id="@+id/editTextPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:hint="password"
-                android:inputType="textPassword"
-                android:paddingBottom="15dp"
-                android:textColorHint="@color/colorAccent" />
-            <EditText
-                android:id="@+id/editTextSportPreference"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:hint="Sport of Preference"
-                android:paddingBottom="15dp"
-                android:textColorHint="@color/colorAccent" />
-
-
             <Button
-                android:id="@+id/buttonSignUp"
+                android:id="@+id/events_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="7dp"
                 android:background="@drawable/rounded_button_transparent"
-                android:text="Sign Up"
+                android:text="Events"
+                android:textAllCaps="false"
+                android:textColor="@color/colorAccent" />
+            <Button
+                android:id="@+id/the_pulse_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="7dp"
+                android:background="@drawable/rounded_button_transparent"
+                android:text="The Pulse"
                 android:textAllCaps="false"
                 android:textColor="@color/colorAccent" />
 
-            <TextView
-                android:id="@+id/textViewLogin"
+            <Button
+                android:id="@+id/resell_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="15dp"
-                android:text="Already have an account? Login"
-                android:textAlignment="center"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:layout_gravity="center"
+                android:layout_margin="7dp"
+                android:background="@drawable/rounded_button_transparent"
+                android:text="Resell Ticket "
+                android:textAllCaps="false"
                 android:textColor="@color/colorAccent" />
 
 
