--- a/app/src/main/res/layout/create_event.xml
+++ b/app/src/main/res/layout/create_event.xml
@@ -4,11 +4,10 @@
     android:layout_height="match_parent">
 
 
-
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="665dp"
         android:orientation="vertical"
         android:padding="15dp">
 
@@ -16,9 +15,10 @@
             android:id="@+id/event_Image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
-            android:background="@drawable/loading"/>
+            android:background="@drawable/loading"
+            android:scaleType="centerCrop" />
+
         <EditText
             android:id="@+id/event_title"
             android:layout_width="match_parent"
@@ -47,28 +47,32 @@
             android:ems="10"
             android:hint="Event Event location" />
 
-
-
-
-
-
-
+        <Button
+            android:id="@+id/uploadImageButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="55dp"
+            android:background="@drawable/rounded_button_transparent"
+            android:text="Upload picture for the event" />
 
 
         <Button
             android:id="@+id/buttonAddEvent"
             android:layout_width="match_parent"
-            android:background="@drawable/rounded_button_transparent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rounded_button_transparent"
             android:text="Create Event" />
 
 
-
-
-
-
-
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone" />
 
 
 </LinearLayout>
